修改了汉字编码
修改了汉字编码

--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,12 @@
-<html>
+<%@ Language=JavaScript %><html>
 
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb18030">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>爱宠帮</title>
-<style>
-<!--
-body{margin:0!important;padding:5px 20px 26px!important;background-color:#fff;font-family:"Lucida Grande","Segoe UI","Apple SD Gothic Neo","Malgun Gothic","Lucida Sans Unicode",Helvetica,Arial,sans-serif;font-size:.9em;overflow-x:hidden;overflow-y:auto}.markdown{font-family:"Hiragino Sans GB","Microsoft YaHei",STHeiti,SimSun,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",'Segoe UI',AppleSDGothicNeo-Medium,'Malgun Gothic',Verdana,Tahoma,sans-serif;padding:20px}.haroopad{padding:20px;color:#222;font-size:15px;font-family:"Roboto Condensed",Tauri,"Hiragino Sans GB","Microsoft YaHei",STHeiti,SimSun,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",'Segoe UI',AppleSDGothicNeo-Medium,'Malgun Gothic',Verdana,Tahoma,sans-serif;background:#fff;line-height:1.6;-webkit-font-smoothing:antialiased}h1{clear:both}.markdown h1{font-size:2.2em;font-weight:700;margin:1.5em 0 1em}-->
-</style>
+<title>主页</title>
 </head>
 
-<body style="background-color: #FF9900">
+<body>
 
 <p><font size="7" face="华文琥珀" color="#FFFFFF">爱</font><font size="6" face="华文琥珀" color="#FFFFFF">宠帮</font></p>
 <p><font size="6" face="华文琥珀">简介</font></p>
@@ -21,24 +17,19 @@ body{margin:0!important;padding:5px 20px 26px!important;background-color:#fff;fo
 <p><font face="华文琥珀" size="6">照片</font></p>
 <table border="0" width="70%">
 	<tr>
-		<td width="103">
-		<a href="photo/3.jpg">
+		<td width="103"><a href="photo/3.jpg">
 		<img border="0" src="photo/3.jpg" width="200" height="150"></a></td>
-		<td width="191">
-		<a href="photo/4.jpg">
+		<td width="191"><a href="photo/4.jpg">
 		<img border="0" src="photo/4.jpg" width="200" height="150"></a></td>
-		<td width="217">
-		<a href="photo/5.jpg">
+		<td width="217"><a href="photo/5.jpg">
 		<img border="0" src="photo/5.jpg" width="200" height="150"></a></td>
-		<td width="175">
-		<a href="photo/6.jpg">
+		<td width="175"><a href="photo/6.jpg">
 		<img border="0" src="photo/6.jpg" width="200" height="150"></a></td>
 		<td><a href="photo/7.jpg">
 		<img border="0" src="photo/7.jpg" width="200" height="150"></a></td>
 	</tr>
 	<tr>
-		<td width="103">
-		<a href="photo/8.jpg">
+		<td width="103"><a href="photo/8.jpg">
 		<img border="0" src="photo/8.jpg" width="200" height="150"></a></td>
 		<td width="191"><a href="photo/1.jpg">
 		<img border="0" src="photo/1.jpg" width="200" height="150"></a></td>
