修改了编码规则

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<%@ Language=JavaScript %><html>
+<%@ Language=VBScript %><html>
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb18030">
