--- a/index.htm
+++ b/index.htm
@@ -2,18 +2,19 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<title>Ö÷Ò³</title>
+<title>ä¸»é¡µ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
 <body>
 
-<p><font size="7" face="»ªÎÄçúçê" color="#FFFFFF">°®</font><font size="6" face="»ªÎÄçúçê" color="#FFFFFF">³è°ï</font></p>
-<p><font size="6" face="»ªÎÄçúçê">¼ò½é</font></p>
+<p><font size="7" face="åŽæ–‡ç¥ç€" color="#FFFFFF">çˆ±</font><font size="6" face="åŽæ–‡ç¥ç€" color="#FFFFFF">å® å¸®</font></p>
+<p><font size="6" face="åŽæ–‡ç¥ç€">ç®€ä»‹</font></p>
 <p><a href="photo/1.jpg">
 <img border="0" src="photo/1.jpg" width="394" height="300"></a><a href="photo/2.jpg"><img border="0" src="photo/2.jpg" width="394" height="300"></a></p>
-<p><font size="6" face="»ªÎÄçúçê"><span style="background-color: #FF9900">
-<font color="#FFFF00">¼ÇÂ¼¹·¹·</font><font color="#00FF00">£¬¼ÇÂ¼Äã¡£</font><font color="#0000FF">Îª¹·¹·</font><font color="#FF0000">À´´´Ôì£¡</font></span></font></p>
-<p><font face="»ªÎÄçúçê" size="6">ÕÕÆ¬</font></p>
+<p><font size="6" face="åŽæ–‡ç¥ç€"><span style="background-color: #FF9900">
+<font color="#FFFF00">è®°å½•ç‹—ç‹—</font><font color="#00FF00">ï¼Œè®°å½•ä½ ã€‚</font><font color="#0000FF">ä¸ºç‹—ç‹—</font><font color="#FF0000">æ¥åˆ›é€ ï¼</font></span></font></p>
+<p><font face="åŽæ–‡ç¥ç€" size="6">ç…§ç‰‡</font></p>
 <table border="0" width="70%">
 	<tr>
 		<td width="103"><a href="photo/3.jpg">
@@ -76,7 +77,7 @@
 		<img border="0" src="photo/34.jpg" width="200" height="150"></a></td>
 	</tr>
 </table>
-<p>¡¡</p>
+<p>&nbsp;</p>
 
 </body>
 
